--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,10 +42,14 @@ dependencies:
   easy_localization: ^3.0.1
   card_swiper: ^2.0.4
   provider: ^6.0.3
+  dio: ^4.0.6
+  retrofit: ^3.0.1+1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.1.11
+  retrofit_generator: ^4.0.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
