--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,12 +37,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  get_it: ^7.2.0
   go_router: ^3.1.0
   stacked: ^2.3.8
   easy_localization: ^3.0.1
   card_swiper: ^2.0.4
   provider: ^6.0.3
   dio: ^4.0.6
+  logger: ^1.1.0
   retrofit: ^3.0.1+1
 
 dev_dependencies:
